NLP TP's/texts/robotics/robotics.stackexchange_0000064837.txt
Q:

Building PCL on OSX 10.10

I am currently encountering build Problems with PCL with rosdep for ros-indigo.
Using brew install pcl --HEAD.
[ 99%] Building CXX object recognition/CMakeFiles/pcl_recognition.dir/src/implicit_shape_model.cpp.o
In file included from /tmp/pcl-c1zXug/recognition/src/face_detection/rf_face_detector_trainer.cpp:8:
In file included from /tmp/pcl-c1zXug/recognition/include/pcl/recognition/face_detection/rf_face_detector_trainer.h:11:
In file included from /tmp/pcl-c1zXug/recognition/include/pcl/recognition/face_detection/face_detector_data_provider.h:11:
In file included from /tmp/pcl-c1zXug/common/include/pcl/common/common.h:41:
In file included from /tmp/pcl-c1zXug/common/include/pcl/pcl_base.h:49:
In file included from /usr/local/include/eigen3/Eigen/StdVector:15:
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/vector:502:5: error: implicit instantiation of undefined template '__static_assert_test<false>'
    static_assert((is_same<typename allocator_type::value_type, value_type>::value),
    ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/__config:498:35: note: expanded from macro 'static_assert'
    typedef __static_assert_check<sizeof(__static_assert_test<(__b)>)> \
                                  ^
/tmp/pcl-c1zXug/recognition/include/pcl/recognition/face_detection/rf_face_detector_trainer.h:37:93: note: in instantiation of template class 'std::__1::vector<std::__1::vector<Eigen::Matrix<float, 3, 1, 0, 3, 1>, std::__1::allocator<Eigen::Matrix<float, 3, 1, 0, 3, 1> > >, Eigen::aligned_allocator<Eigen::Matrix<float, 3, 1, 0, 3, 1> > >' requested here
      std::vector<std::vector<Eigen::Vector3f>, Eigen::aligned_allocator<Eigen::Vector3f> > head_center_votes_clustered_;
                                                                                            ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/__config:494:24: note: template is declared here
template <bool> struct __static_assert_test;
                       ^
Linking CXX executable ../bin/pcl_transform_from_viewpoint
[ 99%] Built target pcl_transform_from_viewpoint
Linking CXX executable ../bin/pcl_transform_point_cloud
[ 99%] Built target pcl_transform_point_cloud
1 error generated.
make[2]: *** [recognition/CMakeFiles/pcl_recognition.dir/src/face_detection/rf_face_detector_trainer.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [recognition/CMakeFiles/pcl_recognition.dir/all] Error 2
make: *** [all] Error 2

Originally posted by rawshark on ROS Answers with karma: 1 on 2014-12-24
Post score: 0

A:

This was fixed here => https://github.com/PointCloudLibrary/pcl/pull/1068
Try again and it should work now. Next time please post this type of issues in the github for PCL or Homebrew-science or the PCL mailing list.

Originally posted by Fran6co with karma: 36 on 2015-01-06
This answer was ACCEPTED on the original site
Post score: 1

